# document_vector_search_benchmark

./: .gitignore  Makefile  README.md  pyproject.toml  result.csv
.github/workflows/: ci.yaml
assets/: result.csv
configs/: default.yml
dvsb/: registry.py
dvsb/data/: __init__.py  dataset.py
dvsb/data/ja/: jsquad.py  jsquad_without_headline.py  miracl.py  mrtydi.py
dvsb/embedding/: __init__.py  cohere.py  e5.py  embedding.py  openai.py  sentence_transformer.py  sonoisa_sentence_bert_japanese.py  sonoisa_sentence_luke_japanese.py  vertex_ai.py
dvsb/late_interaction_retrievers/: __init__.py  _colbert.py  colbert_.py  late_interaction_retriever.py
dvsb/metric/: __init__.py  metric.py  recall.py
dvsb/relevance/: __init__.py  cosine.py  inner_product.py  negative_l2_distance.py  relevance.py
tools/: csv_to_markdown_table.py  run_benchmark.py
